--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 dependencies {
-//    compile project(':library')
-    compile fileTree(dir: 'libs', include: '*.jar')
+    compile project(':library')
+//    compile fileTree(dir: 'libs', include: '*.jar')
 }
 
 android {
