proper gradle setup for sample project

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ buildscript {
 allprojects {
     apply plugin: 'license'
 
+    repositories {
+        mavenCentral()
+    }
+
     sourceSets {
         licenseSrc {
             java {
