--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ android:
     - android-21
     - android-23
     - extra-android-m2repository
-#    - sys-img-armeabi-v7a-android-21
+    - sys-img-armeabi-v7a-android-21
 
 before_script:
   - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
