--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -6,14 +6,14 @@ dependencies {
 }
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '25.0.3'
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         versionCode 2
         versionName '1.0'
-        minSdkVersion 8
-        targetSdkVersion 23
+        minSdkVersion 14
+        targetSdkVersion 27
     }
 
     sourceSets.main {
