--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,19 +1,19 @@
 apply plugin: 'com.android.application'
 
 dependencies {
-    compile project(':library')
+    implementation project(':library')
+    implementation 'com.android.support:support-annotations:28.0.0'
 //    compile fileTree(dir: 'libs', include: '*.jar')
 }
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '25.0.3'
+    compileSdkVersion 26
 
     defaultConfig {
         versionCode 2
         versionName '1.0'
         minSdkVersion 8
-        targetSdkVersion 23
+        targetSdkVersion 26
     }
 
     sourceSets.main {
