--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -7,13 +7,14 @@ dependencies {
 }
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 23
+    buildToolsVersion '25.0.3'
 
     defaultConfig {
         versionCode 2
         versionName '1.0'
         minSdkVersion 8
-        targetSdkVersion 26
+        targetSdkVersion 23
     }
 
     sourceSets.main {
