--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,19 +1,20 @@
 apply plugin: 'com.android.application'
 
 dependencies {
-    compile project(':library')
-//    compile fileTree(dir: 'libs', include: '*.jar')
+    implementation project(':library')
+//    implementation fileTree(dir: 'libs', include: '*.jar')
+    implementation 'com.android.support:support-annotations:28.0.0'
 }
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '25.0.3'
+    compileSdkVersion 26
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         versionCode 2
         versionName '1.0'
-        minSdkVersion 8
-        targetSdkVersion 23
+        minSdkVersion 9
+        targetSdkVersion 26
     }
 
     sourceSets.main {
