--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:4.1.3'
         classpath 'nl.javadude.gradle.plugins:license-gradle-plugin:0.7.0'
     }
 }
@@ -32,7 +32,8 @@ allprojects {
             java {
                 srcDir 'src'
                 exclude 'com/anjlab/android/iab/v3/Security.java'
-                exclude 'com/android/vending/billing/IInAppBillingService.aidl'
+                //exclude 'com/android/vending/billing/IInAppBillingService.aidl'
+                exclude 'com/android/billingclient/api'
             }
         }
     }
