--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -3,18 +3,21 @@ apply plugin: 'com.android.application'
 dependencies {
     implementation project(':library')
 //    implementation fileTree(dir: 'libs', include: '*.jar')
-    implementation 'com.android.support:support-annotations:28.0.0'
+    //implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'androidx.annotation:annotation:1.2.0'
+
+
 }
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '28.0.3'
+    compileSdkVersion 30
+    buildToolsVersion '30.0.3'
 
     defaultConfig {
         versionCode 2
         versionName '1.0'
-        minSdkVersion 9
-        targetSdkVersion 26
+        minSdkVersion 14
+        targetSdkVersion 30
     }
 
     sourceSets.main {
