fix warnigns in sample project

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,3 +1,6 @@
+plugins {
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+}
 apply plugin: 'com.android.application'
 
 dependencies {
