upgrade gradle plugin

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -6,18 +6,19 @@ apply plugin: 'com.android.application'
 dependencies {
     implementation project(':library')
 //    implementation fileTree(dir: 'libs', include: '*.jar')
+//    implementation 'com.anjlab.android.iab.v3:library:2.0.0.1'
     implementation 'com.android.support:support-annotations:28.0.0'
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion '30.0.3'
 
     defaultConfig {
         versionCode 4
         versionName '4.0'
         minSdkVersion 14
-        targetSdkVersion 30
+        targetSdkVersion 31
     }
 
     sourceSets.main {
