--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -7,7 +7,7 @@ dependencies {
     implementation project(':library')
 //    implementation fileTree(dir: 'libs', include: '*.jar')
 //    implementation 'com.anjlab.android.iab.v3:library:2.0.0.1'
-    implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'androidx.annotation:annotation:1.3.0'
 }
 
 android {
