--- a/.github/workflows/connected-check.yml
+++ b/.github/workflows/connected-check.yml
@@ -21,6 +21,10 @@ jobs:
 
       - uses: actions/checkout@v2
 
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 11
+
       - name: Set up build properties
         run: |
           echo 'licenceKey=""' > local.properties
