--- a/.github/workflows/connected-check.yml
+++ b/.github/workflows/connected-check.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - '*'
 
+  pull_request:
+    branches:
+      - master
+
 jobs:
   run-connected-checks:
     # put [skip ci] into the commit message if you don't want to run this workflow
@@ -15,14 +19,15 @@ jobs:
 
     steps:
       - name: Cancel previous runs
-        uses: styfle/cancel-workflow-action@0.5.0
+        uses: styfle/cancel-workflow-action@0.12.1
         with:
           access_token: ${{ github.token }}
 
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v4
         with:
+          distribution: oracle
           java-version: 11
 
       - name: Set up build properties
